# localsend

./: Cargo.toml  LICENSE  README.md
src/: config.rs  discovery.rs  error.rs  http_server.rs  lib.rs  models.rs  transfer.rs
src/discovery/: http.rs  mod.rs  multicast.rs
src/models/: device.rs  file.rs  mod.rs
src/server/: http.rs
src/transfer/: mod.rs  session.rs  upload.rs
