[package]
name = "localsend"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "A rust implementation of the localsend protocol"
homepage = "https://github.com/wylited/localsend"
repository = "https://github.com/wylited/localsend"
readme = "README.md"

[dependencies]
axum = { version = "0.7.9", features = ["json", "macros", "tokio"] }
axum-macros = "0.4.2"
chrono = "0.4.39"
mime = "0.3.17"
mime_guess = "2.0.5"
native-dialog = "0.7.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sha256 = "1.5.0"
thiserror = "2.0.6"
tokio = "1.42.0"
tower-http = { version = "0.6.2", features = ["limit"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
