[package]
name = "localsend"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "A rust implementation of the localsend protocol"
homepage = "https://github.com/wylited/localsend"
repository = "https://github.com/wylited/localsend"
readme = "README.md"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls", "tokio-rustls"] }
chrono = "0.4"
directories = "6"
figment = { version = "0.10", features = ["toml", "test", "env"] }
julid-rs = { version = "1", default-features = false, features = ["serde"] }
local-ip-address = "0.6"
log = "0.4"
mime = "0.3"
mime_guess = "2"
network-interface = { version = "2", features = ["serde"] }
rcgen = "0.14"
reqwest = { version = "0.12", features = ["json"] }
rustix = { version = "1", default-features = false, features = ["system"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha256 = "1.6"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["time", "macros", "rt-multi-thread"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "logging"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["limit"] }
